--- a/RTSFramework/RTSFramework.CSharp/packages.config
+++ b/RTSFramework/RTSFramework.CSharp/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis" version="2.6.1" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis" version="2.7.0" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net471" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net471" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net471" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.6.1" targetFramework="net471" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.6.1" targetFramework="net471" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.6.1" targetFramework="net471" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.6.1" targetFramework="net471" />
-  <package id="Microsoft.Composition" version="1.0.31" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.7.0" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.7.0" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.7.0" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.7.0" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.7.0" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.7.0" targetFramework="net471" />
+  <package id="Microsoft.VisualStudio.TestPlatform" version="14.0.0.1" targetFramework="net471" />
+  <package id="Microsoft.VisualStudio.TestPlatform.ObjectModel" version="14.0.0" targetFramework="net471" />
+  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
