--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -10,10 +10,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RTSFramework.Concrete.Git</RootNamespace>
     <AssemblyName>RTSFramework.Concrete.Git</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
