--- a/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.Concrete.RTS.csproj
+++ b/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.Concrete.RTS.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RTSFramework.Concrete.RTS</RootNamespace>
     <AssemblyName>RTSFramework.Concrete.RTS</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,6 +61,9 @@
       <Project>{8E0E2C16-376E-4465-AF69-E1B300726080}</Project>
       <Name>RTSFramework.RTSApproaches.Utilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
