--- a/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.csproj
+++ b/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.csproj
@@ -53,6 +53,13 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Coverage.Analysis">
+      <HintPath>$(VS140COMNTOOLS)..\IDE\PrivateAssemblies\Microsoft.VisualStudio.Coverage.Analysis.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.VisualStudio.Coverage.Interop">
+      <HintPath>$(VS140COMNTOOLS)..\IDE\PrivateAssemblies\Microsoft.VisualStudio.Coverage.Interop.dll</HintPath>
+    </Reference>
     <Reference Include="CommonServiceLocator, Version=2.0.3.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.5.7.3\lib\net46\CommonServiceLocator.dll</HintPath>
     </Reference>
@@ -269,6 +276,18 @@
     <Compile Include="MSTestFrameworkConnectorWithMapUpdating.cs" />
     <Compile Include="MSTestFrameworkConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\CodeCoverageElements\ClassElement.cs" />
+    <Compile Include="Utilities\CodeCoverageElements\CoverageElement.cs" />
+    <Compile Include="Utilities\CodeCoverageElements\FileElement.cs" />
+    <Compile Include="Utilities\CodeCoverageElements\LineElement.cs" />
+    <Compile Include="Utilities\CodeCoverageElements\PackageElement.cs" />
+    <Compile Include="Utilities\CodeCoverageElements\ProjectElement.cs" />
+    <Compile Include="Utilities\CodeCoverageMetrics\BaseMetrics.cs" />
+    <Compile Include="Utilities\CodeCoverageMetrics\ClassMetrics.cs" />
+    <Compile Include="Utilities\CodeCoverageMetrics\FileMetrics.cs" />
+    <Compile Include="Utilities\CodeCoverageMetrics\PackageMetrics.cs" />
+    <Compile Include="Utilities\CodeCoverageMetrics\ProjectMetrics.cs" />
+    <Compile Include="Utilities\MikeParser.cs" />
     <Compile Include="Utilities\TrxParser.cs" />
     <Compile Include="VisualStudioDocumentOnlineDeltaDiscoverer.cs" />
   </ItemGroup>
