--- a/RTSFramework/RTSFramework/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework/RTSFramework.Core.csproj
@@ -83,8 +83,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OfflineController.cs" />
-    <Compile Include="OnlineController.cs" />
+    <Compile Include="DynamicRTSController.cs" />
+    <Compile Include="RTSApproachBase.cs" />
     <Compile Include="StructuralDelta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
