--- a/RTSFramework/RTSFramework/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework/RTSFramework.Core.csproj
@@ -83,10 +83,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Artefacts\FileElement.cs" />
     <Compile Include="CoverageData.cs" />
     <Compile Include="DynamicRTSController.cs" />
     <Compile Include="RTSApproachBase.cs" />
-    <Compile Include="StructuralDelta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ConsoleStopWatchTracker.cs" />
   </ItemGroup>
