--- a/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
+++ b/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24F91A87-F395-4FD5-8619-5A509715630E}</ProjectGuid>
+    <ProjectGuid>{BFA8DBD3-1761-4660-A372-334482F08950}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RTSFramework.Concrete.Adatpers</RootNamespace>
-    <AssemblyName>RTSFramework.Concrete.Adatpers</AssemblyName>
+    <RootNamespace>RTSFramework.Concrete.TFS2010</RootNamespace>
+    <AssemblyName>RTSFramework.Concrete.TFS2010</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,29 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArtefactAdapters\GitProgramCSharpProgramAdapter.cs" />
-    <Compile Include="DeltaAdapters\FileDeltaCSharpFileDeltaAdapter.cs" />
+    <Compile Include="Artefacts\TFS2010ProgramModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DeltaAdapters\TrivialDeltaAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RTSFramework.Concrete.Git\RTSFramework.Concrete.Git.csproj">
-      <Project>{2B9BB9A5-DB75-4EC9-BE24-0F06619D3216}</Project>
-      <Name>RTSFramework.Concrete.Git</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
       <Project>{ED8744A8-1310-45B9-B2E4-93E1F70BCBCC}</Project>
       <Name>RTSFramework.Contracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.csproj">
-      <Project>{ECDB3480-0CF5-4DED-8118-046F41CD4743}</Project>
-      <Name>RTSFramework.Concrete.CSharp</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RTSFramework\RTSFramework.Core.csproj">
-      <Project>{34343ade-c3e0-423d-94b6-9d0400f498cb}</Project>
-      <Name>RTSFramework.Core</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
