Improvements on getting models

--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -90,8 +90,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Artefacts\GitProgramModel.cs" />
-    <Compile Include="Artefacts\VersionReferenceType.cs" />
-    <Compile Include="CommitIdentifierHelper.cs" />
+    <Compile Include="Artefacts\GitVersionReferenceType.cs" />
+    <Compile Include="GitProgramModelProvider.cs" />
     <Compile Include="LocalGitChangedFilesDiscoverer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
