--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -101,6 +101,7 @@
     <Compile Include="IRTSApproach.cs" />
     <Compile Include="IRTSListener.cs" />
     <Compile Include="ITestFramework.cs" />
+    <Compile Include="ITestProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
