--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -104,7 +104,7 @@
       <Project>{ecdb3480-0cf5-4ded-8118-046f41cd4743}</Project>
       <Name>RTSFramework.Concrete.CSharp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework\RTSFramework.Core.csproj">
+    <ProjectReference Include="..\RTSFramework.Core\RTSFramework.Core.csproj">
       <Project>{34343ADE-C3E0-423D-94B6-9D0400F498CB}</Project>
       <Name>RTSFramework.Core</Name>
     </ProjectReference>
