--- a/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.Concrete.RTS.csproj
+++ b/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.Concrete.RTS.csproj
@@ -96,7 +96,7 @@
       <Project>{8E0E2C16-376E-4465-AF69-E1B300726080}</Project>
       <Name>RTSFramework.RTSApproaches.Utilities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework\RTSFramework.Core.csproj">
+    <ProjectReference Include="..\RTSFramework.Core\RTSFramework.Core.csproj">
       <Project>{34343ADE-C3E0-423D-94B6-9D0400F498CB}</Project>
       <Name>RTSFramework.Core</Name>
     </ProjectReference>
